force-app/main/default/objects/College__c/fields/Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Accreditation__c</fullName>
    <label>Accreditation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>