force-app/main/default/objects/College__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>