force-app/main/default/objects/College__c/fields/Coll_Summary__c.field-meta.xml
<CustomField>
    <fullName>Coll_Summary__c</fullName>
    <label>Coll Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>