force-app/main/default/objects/College__c/fields/College_Summary__c.field-meta.xml
<CustomField>
    <fullName>College_Summary__c</fullName>
    <label>College Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>