force-app/main/default/objects/College__c/fields/Establishment_Year__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Year__c</fullName>
    <label>Establishment Year</label>
    <type>Date</type>
</CustomField>