force-app/main/default/objects/College__c/fields/Total_Child_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Discount__c</fullName>
    <label>Total Child Discount</label>
    <summarizedField>Student__c.Discount__c</summarizedField>
    <summaryForeignKey>Student__c.College__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>