force-app/main/default/objects/College__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B Com</fullName>
            </value>
            <value>
                <fullName>B Arch</fullName>
            </value>
            <value>
                <fullName>B TECH IT</fullName>
            </value>
            <value>
                <fullName>B tech</fullName>
                <isActive>false</isActive>
                <label>B tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>