force-app/main/default/objects/College__c/validationRules/Check_total_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_total_Balance</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Child_Discount__c &gt;10000</errorConditionFormula>
    <errorMessage>Maximum  budget exceed  - of 10 k</errorMessage>
</ValidationRule>