force-app/main/default/objects/College__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>College_Id__c</columns>
    <columns>Accreditation__c</columns>
    <columns>Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Location__c</columns>
    <columns>Total_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>