force-app/main/default/objects/College__c/listViews/B_COM.listView-meta.xml
<ListView>
    <fullName>B_COM</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Affiliation__c</columns>
    <columns>Establishment_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>B Com</value>
    </filters>
    <label>B.COM</label>
</ListView>