force-app/main/default/objects/College__c/listViews/Colleges_B_TECH.listView-meta.xml
<ListView>
    <fullName>Colleges_B_TECH</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>B tech</value>
    </filters>
    <label>Colleges  - B-TECH</label>
</ListView>